untracking non-source data
Updated .gitignore, removed extracted data from tracking cache

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@
 __pycache__/
 *.py[cod]
 *$py.class
+
+# Extracted data excel files
+DATA FILES/Extracted_Data/
+
+# Cleaned data excel files
+DATA FILES/Cleaned_Data/
